--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2504,7 +2504,8 @@
 					"image/utils/loading.gif",
 					"image/qiuzhi/qiuzhi_noanswer.png",
 					"css/iconfont/iconfont.css",
-					"image/cloud/cloud_0_unknow_0.png"
+					"image/cloud/cloud_0_unknow_0.png",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/cloud/app_notes_create.html"
