展现详情加载android视频播放
********展现详情的苹果播放未加载

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5300,7 +5300,8 @@
 					"js/utils/all-preview.js",
 					"js/utils/quo.js",
 					"js/utils/MPreview.mobile.min.js",
-					"js/mui.previewimage.js"
+					"js/mui.previewimage.js",
+					"js/utils/video.js"
 				],
 				"refer": [
 					"html/register/login.html",
