展现详情 个边手机适配
引用vue的发布版本

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5324,7 +5324,11 @@
 					"css/utils/preview.css",
 					"image/dynamic/praise.png",
 					"image/utils/default_personalimage.png",
-					"js/utils/showvideoutil.js"
+					"js/utils/showvideoutil.js",
+					"fonts/iconfont.ttf",
+					"fonts/mui.ttf",
+					"fonts/fangzheng.ttf",
+					"js/utils/vue.min.js"
 				],
 				"refer": [
 					"html/register/login.html",
