--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5056,7 +5056,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [
 					"html/micro-course/history-records.html"
@@ -5186,7 +5187,25 @@
 					"css/mui.min.css",
 					"css/utils/common.css",
 					"js/libs/crypto-js/crypto-js.js",
-					"image/utils/loading.gif"
+					"image/utils/loading.gif",
+					"js/mui.pullToRefresh.js",
+					"js/storageKeyName.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/utils/playutil.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"js/publicMicroClass.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/micro-course/coursedetails.js"
 				],
 				"refer": [
 					"html/micro-course/course_section.html"
