--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2059,7 +2059,8 @@
 					"html/show/show_home_1.html",
 					"html/qiuzhi/qiuzhi_home.html",
 					"js/utils/app-update.js",
-					"html/micro-course/course-home1.html"
+					"html/micro-course/course-home1.html",
+					"html/show/show-home1.html"
 				],
 				"refer": [
 					"html/mine.html",
@@ -2074,7 +2075,6 @@
 					"html/register/login.html",
 					"html/cloud/order-member.html",
 					"html/micro-course/course-home.html",
-					"html/show/show-home1.html",
 					"html/show/show-home2.html"
 				],
 				"priority": 0
