--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5221,7 +5221,24 @@
 					"css/mui.min.css",
 					"css/utils/common.css",
 					"js/libs/crypto-js/crypto-js.js",
-					"image/qiuzhi/qiuzhi_noanswer.png"
+					"image/qiuzhi/qiuzhi_noanswer.png",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/utils/playutil.js",
+					"css/iconfont/iconfont.css",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"js/publicMicroClass.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/micro-course/coursedetails.js"
 				],
 				"refer": [
 					"html/register/login.html",
