作业发布和作业评论 滚动

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2738,7 +2738,8 @@
 					"js/mui.previewimage.js",
 					"css/utils/preview.css",
 					"fonts/fangzheng.ttf",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"js/utils/vue.min.js"
 				],
 				"refer": [
 					"html/homework/pic-detail.html"
