--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1,6 +1,6 @@
 {
 	"@platforms": ["android", "iPhone", "iPad"],
-	"id": "H56171390",/*应用的标识，创建应用时自动生成，勿手动修改*/
+	"id": "H5695C7EA",/*应用的标识，创建应用时自动生成，勿手动修改*/
 	"name": "微视学堂",/*应用名称，程序桌面图标名称*/
 	"version": {
 		"name": "2.0",/*应用版本名称*/
