--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1,9 +1,9 @@
 {
 	"@platforms": ["android", "iPhone", "iPad"],
-	"id": "H56171390",/*应用的标识，创建应用时自动生成，勿手动修改*/
-	"name": "教宝云",/*应用名称，程序桌面图标名称*/
+	"id": "H5695C7EA",/*应用的标识，创建应用时自动生成，勿手动修改*/
+	"name": "微视学堂",/*应用名称，程序桌面图标名称*/
 	"version": {
-		"name": "24.0.0.2017.0523_beta",/*应用版本名称*/
+		"name": "2.0",/*应用版本名称*/
 		"code": "83"
 	},
 	"description": "",/*应用描述信息*/
