--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5018,7 +5018,8 @@
 					"image/utils/playvideo.png",
 					"image/utils/img-loading.gif",
 					"image/utils/video-loading.gif",
-					"js/libs/jquery.lazyload.min.js"
+					"js/libs/jquery.lazyload.min.js",
+					"image/mine/invite_none_0.png"
 				],
 				"refer": [],
 				"priority": 0
