--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5517,11 +5517,27 @@
 				"resources": [
 					"css/mui.min.css",
 					"js/libs/crypto-js/crypto-js.js",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"html/sciedu/sciedu-list.html",
+					"fonts/mui.ttf"
 				],
 				"refer": [
-					"html/sciedu/sciedu_show_main.html"
+					"html/sciedu/sciedu_show_main.html",
+					"html/utils/customizeCity.html"
 				],
+				"priority": 0
+			},
+			"html/sciedu/sciedu-list.html": {
+				"resources": [
+					"js/sciedu/sciedu-list.js",
+					"js/utils/vue.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/utils/common.css",
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/fangzheng.ttf"
+				],
+				"refer": [],
 				"priority": 0
 			}
 		},
