--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5537,7 +5537,8 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"fonts/fangzheng.ttf",
 					"image/utils/default_load_2_1.gif",
-					"js/libs/jquery.lazyload.min.js"
+					"js/libs/jquery.lazyload.min.js",
+					"js/utils/vue.min.js"
 				],
 				"refer": [],
 				"priority": 0
