--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4530,7 +4530,8 @@
 					"js/utils/events.js",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
