--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1,7 +1,7 @@
 {
 	"@platforms": ["android", "iPhone", "iPad"],
-	"id": "H5695C7EA",/*应用的标识，创建应用时自动生成，勿手动修改*/
-	"name": "微视学堂",/*应用名称，程序桌面图标名称*/
+	"id": "H56171390",/*应用的标识，创建应用时自动生成，勿手动修改*/
+	"name": "教宝云",/*应用名称，程序桌面图标名称*/
 	"version": {
 		"name": "29.0",/*应用版本名称*/
 		"code": "83"
