--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4,8 +4,8 @@
 		"iPhone",
 		"iPad"
 	],
-	"id": "H5695C7EA",/*应用的标识，创建应用时自动生成，勿手动修改*/
-	"name": "微视学堂",/*应用名称，程序桌面图标名称*/
+	"id": "H56171390",/*应用的标识，创建应用时自动生成，勿手动修改*/
+	"name": "教宝云",/*应用名称，程序桌面图标名称*/
 	"version": {
 		"name": "30.0.0_2017",/*应用版本名称*/
 		"code": "83"
