--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ JiaoBaoYun-hb/unpackage/release/H56171390.wgt
 JiaoBaoYun-hb/unpackage/.confirmed_dependencies
 JiaoBaoYun-hb/manifest.json
 JiaoBaoYun-hb/manifest.json
+*.ipa
