--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -143,7 +143,7 @@
 				"frameworks": []
 			},
 			"google": {
-				"packagename": "com.jiaobao",/*Android应用包名，如io.dcloud.HelloH5*/
+				"packagename": "com.jiaobao.jiaobaoyun",/*Android应用包名，如io.dcloud.HelloH5*/
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
