--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5664,7 +5664,8 @@
 					"js/micro-course/course-list.js",
 					"js/libs/crypto-js/crypto-js.js",
 					"fonts/mui.ttf",
-					"js/mui.js"
+					"js/mui.js",
+					"js/libs/zepto-1.2.0.js"
 				],
 				"refer": [
 					"html/micro-course/course_details.html"
