Revert "zepto 左滑 右滑"
This reverts commit f4b216b4daf055bb4126a44ab5878b0c32f49f00.

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5664,8 +5664,7 @@
 					"js/micro-course/course-list.js",
 					"js/libs/crypto-js/crypto-js.js",
 					"fonts/mui.ttf",
-					"js/mui.js",
-					"js/libs/zepto-1.2.0.js"
+					"js/mui.js"
 				],
 				"refer": [
 					"html/micro-course/course_details.html"
