--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2860,7 +2860,8 @@
 					"js/mui.zoom.js",
 					"css/utils/preview.css",
 					"fonts/iconfont.ttf",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"js/utils/vue.min.js"
 				],
 				"refer": [
 					"html/homework/change-comment.html"
