--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -14,7 +14,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "html/index/firstPage.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "html/index/index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -5048,7 +5048,8 @@
 					"image/utils/playvideo.png",
 					"image/mine/invite_none_0.png",
 					"js/utils/vue.min.js",
-					"image/utils/default_load_2.gif"
+					"image/utils/default_load_2.gif",
+					"js/libs/jquery.lazyload.min.js"
 				],
 				"refer": [
 					"html/quan/space-detail.html",
@@ -5257,7 +5258,9 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/mui.ttf",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
